--- a/Misc/Companies/Verily/VerilySWEPosition.yml
+++ b/Misc/Companies/Verily/VerilySWEPosition.yml
@@ -1,4 +1,4 @@
-deckName: Misc
+deckName: Staging
 modelName: BasicMathJax
 tags:
 - Misc
@@ -10,24 +10,26 @@ markdownTabLength: 2
 
 notes:
 
-- Front: |
-    What are the qualifications for this position?
-  Back: |
-    Minimum qualifications:
-    
-    - BA/BS degree in Computer Science, Electrical Engineering, or a related field, or equivalent practical experience in software engineering.
-    - 2 years experience with Java or a similar general-purpose object-oriented programming language.
+- fields:
+    Front: |
+      What are the qualifications for this position?
+    Back: |
+      Minimum qualifications:
 
-    Preferred qualifications:
-    
-    - Knowledge and experience with Java development.
-    - Interest or experience with data processing platforms like MapReduce, BigQuery, or Google Cloud offerings.
-    
-    
-- Front: |
-    What are the responsibilities of this position?
-  Back: |
-    - Design/build data-processing systems to curate/transform/refine raw clinical data into useful/intuitive output datasets.
-    - Develop APIs and output formats meeting needs of biostatisticians, clinical researchers, and analysis experts.
-      - While maintaining all relevant contractual or regulatory obligations (e.g. HIPAA compliance).
-    - Collaborate with consumers of curated data in order to iterate towards a system that makes thes consumers happier and more productive.
+      - BA/BS degree in Computer Science, Electrical Engineering, or a related field, or equivalent practical experience in software engineering.
+      - 2 years experience with Java or a similar general-purpose object-oriented programming language.
+
+      Preferred qualifications:
+
+      - Knowledge and experience with Java development.
+      - Interest or experience with data processing platforms like MapReduce, BigQuery, or Google Cloud offerings.
+
+
+- fields:
+    Front: |
+      What are the responsibilities of this position?
+    Back: |
+      - Design/build data-processing systems to curate/transform/refine raw clinical data into useful/intuitive output datasets.
+      - Develop APIs and output formats meeting needs of biostatisticians, clinical researchers, and analysis experts.
+        - While maintaining all relevant contractual or regulatory obligations (e.g. HIPAA compliance).
+      - Collaborate with consumers of curated data in order to iterate towards a system that makes thes consumers happier and more productive.
