Rewrite VerilySensorProjects for overrides

--- a/Misc/Companies/Verily/VerilyProjects/VerilySensorProjects.yml
+++ b/Misc/Companies/Verily/VerilyProjects/VerilySensorProjects.yml
@@ -1,4 +1,4 @@
-deckName: Misc
+deckName: Staging
 modelName: BasicMathJax
 tags:
 - Misc
@@ -10,29 +10,33 @@ markdownTabLength: 2
 
 notes:
 
-- Front: |
-    What are some Verily sensor projects?
-  Back: |
-    - Miniaturized CGM
-    - Smart Lens Program
-    - Study Watch
+- fields:
+    Front: |
+      What are some Verily sensor projects?
+    Back: |
+      - Miniaturized CGM
+      - Smart Lens Program
+      - Study Watch
 
-- Front: |
-    What is Verily's _Miniaturized CGM_ project?
-  Back: |
-    - Continuous Glucose Monitors for people with diabetes.
-    - Partner: _Dexcom_.
+- fields:
+    Front: |
+      What is Verily's _Miniaturized CGM_ project?
+    Back: |
+      - Continuous Glucose Monitors for people with diabetes.
+      - Partner: _Dexcom_.
 
-- Front: |
-    What is Verily's _Smart Lens Program_ project?
-  Back: |
-    - Contact lenses with wireless sensing.
-    - Applications include glucose sensing and accomodative vision correction.
-    - Partner: _Alcon,_ subsidiary of _Novartis_.
+- fields:
+    Front: |
+      What is Verily's _Smart Lens Program_ project?
+    Back: |
+      - Contact lenses with wireless sensing.
+      - Applications include glucose sensing and accomodative vision correction.
+      - Partner: _Alcon,_ subsidiary of _Novartis_.
 
-- Front: |
-    What is Verily's _Study Watch_ project?
-  Back: |
-    - Smart watch. Verily-developed hardware and data platform.
-    - Collects physiological and environment data.
-    - For clinical studies.
+- fields:
+    Front: |
+      What is Verily's _Study Watch_ project?
+    Back: |
+      - Smart watch. Verily-developed hardware and data platform.
+      - Collects physiological and environment data.
+      - For clinical studies.
